# server/desc/swagger/system-user.swagger.json
@@ -14,7 +14,85 @@
     "application/json"
   ],
   "paths": {
-    "/systemManage/getUserList": {
+    "/system/addUser": {
+      "post": {
+        "operationId": "Add",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/AddResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AddRequest"
+            }
+          }
+        ],
+        "tags": [
+          "system/user"
+        ]
+      }
+    },
+    "/system/deleteUser": {
+      "post": {
+        "operationId": "Delete",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/DeleteResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/DeleteRequest"
+            }
+          }
+        ],
+        "tags": [
+          "system/user"
+        ]
+      }
+    },
+    "/system/editUser": {
+      "post": {
+        "operationId": "Edit",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/EditResponse"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/EditRequest"
+            }
+          }
+        ],
+        "tags": [
+          "system/user"
+        ]
+      }
+    },
+    "/system/getUserList": {
       "get": {
         "operationId": "List",
         "responses": {
@@ -25,20 +103,322 @@
             }
           }
         },
+        "parameters": [
+          {
+            "name": "current",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "username",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "userGender",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "nickName",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "userPhone",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "userEmail",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "status",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
         "tags": [
           "system/user"
+        ],
+        "consumes": [
+          "multipart/form-data"
         ]
       }
     }
   },
   "definitions": {
+    "AddRequest": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "userGender": {
+          "type": "string",
+          "default": "1"
+        },
+        "nickName": {
+          "type": "string"
+        },
+        "userPhone": {
+          "type": "string"
+        },
+        "userEmail": {
+          "type": "string"
+        },
+        "status": {
+          "type": "string",
+          "default": "1"
+        },
+        "password": {
+          "type": "string"
+        }
+      },
+      "title": "AddRequest",
+      "required": [
+        "username",
+        "userGender",
+        "nickName",
+        "userPhone",
+        "userEmail",
+        "status",
+        "password"
+      ]
+    },
+    "AddResponse": {
+      "type": "object",
+      "title": "AddResponse"
+    },
+    "DeleteRequest": {
+      "type": "object",
+      "properties": {
+        "ids": {
+          "type": "array",
+          "items": {
+            "type": "integer",
+            "format": "int64"
+          }
+        }
+      },
+      "title": "DeleteRequest",
+      "required": [
+        "ids"
+      ]
+    },
+    "DeleteResponse": {
+      "type": "object",
+      "title": "DeleteResponse"
+    },
+    "EditRequest": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "username": {
+          "type": "string"
+        },
+        "userGender": {
+          "type": "string"
+        },
+        "nickName": {
+          "type": "string"
+        },
+        "userPhone": {
+          "type": "string"
+        },
+        "userEmail": {
+          "type": "string"
+        },
+        "status": {
+          "type": "string"
+        }
+      },
+      "title": "EditRequest",
+      "required": [
+        "id",
+        "username",
+        "userGender",
+        "nickName",
+        "userPhone",
+        "userEmail",
+        "status"
+      ]
+    },
+    "EditResponse": {
+      "type": "object",
+      "title": "EditResponse"
+    },
     "ListRequest": {
       "type": "object",
+      "properties": {
+        "current": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "size": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "username": {
+          "type": "string"
+        },
+        "userGender": {
+          "type": "string"
+        },
+        "nickName": {
+          "type": "string"
+        },
+        "userPhone": {
+          "type": "string"
+        },
+        "userEmail": {
+          "type": "string"
+        },
+        "status": {
+          "type": "string"
+        }
+      },
       "title": "ListRequest"
     },
     "ListResponse": {
       "type": "object",
-      "title": "ListResponse"
+      "properties": {
+        "current": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "size": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "total": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "records": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/SystemUser"
+          }
+        }
+      },
+      "title": "ListResponse",
+      "required": [
+        "records"
+      ]
+    },
+    "PageRequest": {
+      "type": "object",
+      "properties": {
+        "current": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "size": {
+          "type": "integer",
+          "format": "int32"
+        }
+      },
+      "title": "PageRequest",
+      "required": [
+        "current",
+        "size"
+      ]
+    },
+    "PageResponse": {
+      "type": "object",
+      "properties": {
+        "current": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "size": {
+          "type": "integer",
+          "format": "int32"
+        },
+        "total": {
+          "type": "integer",
+          "format": "int64"
+        }
+      },
+      "title": "PageResponse",
+      "required": [
+        "current",
+        "size",
+        "total"
+      ]
+    },
+    "SystemUser": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "integer",
+          "format": "int64"
+        },
+        "username": {
+          "type": "string"
+        },
+        "userGender": {
+          "type": "string"
+        },
+        "nickName": {
+          "type": "string"
+        },
+        "userPhone": {
+          "type": "string"
+        },
+        "userEmail": {
+          "type": "string"
+        },
+        "userRoles": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
+        "status": {
+          "type": "string"
+        },
+        "createTime": {
+          "type": "string"
+        },
+        "updateTime": {
+          "type": "string"
+        }
+      },
+      "title": "SystemUser",
+      "required": [
+        "id",
+        "username",
+        "userGender",
+        "nickName",
+        "userPhone",
+        "userEmail",
+        "userRoles",
+        "status",
+        "createTime",
+        "updateTime"
+      ]
     }
   },
   "securityDefinitions": {
