# server/internal/logic/system/user/delete.go
@@ -1,0 +1,38 @@
+package user
+
+import (
+	"context"
+
+	"github.com/jzero-io/jzero-contrib/condition"
+	"github.com/zeromicro/go-zero/core/logx"
+
+	"server/internal/svc"
+	types "server/internal/types/system/user"
+)
+
+type Delete struct {
+	logx.Logger
+	ctx    context.Context
+	svcCtx *svc.ServiceContext
+}
+
+func NewDelete(ctx context.Context, svcCtx *svc.ServiceContext) *Delete {
+	return &Delete{
+		Logger: logx.WithContext(ctx),
+		ctx:    ctx,
+		svcCtx: svcCtx,
+	}
+}
+
+func (l *Delete) Delete(req *types.DeleteRequest) (resp *types.DeleteResponse, err error) {
+	if len(req.Ids) == 0 {
+		return nil, nil
+	}
+
+	err = l.svcCtx.Model.SystemUser.DeleteByCondition(l.ctx, condition.Condition{
+		Field:    "id",
+		Operator: condition.In,
+		Value:    req.Ids,
+	})
+	return
+}
